<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/Logout_without_search"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_person_remove_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/home_menu_without_search"
        android:title="@string/home_menu"/>
    <item
        android:id="@+id/MyProfile_without_search"
        android:title="@string/my_profile"/>
    <item
        android:id="@+id/MyUploads_without_search"
        android:title="@string/my_uploads"/>
    <item
        android:id="@+id/Upload_new_book_without_search"
        android:title="@string/upload_new_book"/>


</menu>