<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:padding="20dp" android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

        <ImageView
            android:id="@+id/LoginScreenLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_bl_logo_v2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="@font/oxygen"
            android:text="@string/login"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Welcome back! Please login to your account."
            android:textSize="13dp"
            android:textStyle="bold"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black"/>


    -<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/username_ip_layout"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:startIconDrawable="@drawable/ic_user_"
    android:textColor="@color/black"
    android:hint="@string/enter_registered_email"
    android:layout_marginVertical="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/edit_user"
        android:layout_marginVertical="10dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/open_sans"/>

</com.google.android.material.textfield.TextInputLayout>


    -<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/inputlayout2"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:startIconDrawable="@drawable/ic_password"
    android:textColor="@color/black"
    android:hint="@string/enter_password"
    android:layout_marginVertical="10dp"
    app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/edit_password"
        android:layout_marginVertical="10dp"
        android:inputType="textPassword"
        android:fontFamily="@font/open_sans"/>

</com.google.android.material.textfield.TextInputLayout>

     <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/forgotPassword"
         android:text="Forgot Password?"
         android:textSize="15sp"
         android:textAlignment="viewEnd"
         android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:inputType="text"
         android:fontFamily="@font/open_sans"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        app:cornerRadius="36dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:fontFamily="@font/oxygen"/>


    -<LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:text="New to Bookloop?"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/Signup"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:text="  SignUp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

</LinearLayout>

    </LinearLayout>
</ScrollView>